[package]
name = "vroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.33.0", features=[ "full" ] }
uuid = { version = "1.4.1", features=["v4", "serde"]}
password-hash = "0.5.0"
dotenv = "0.15.0"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
